--- a/src/commonStyles.scss
+++ b/src/commonStyles.scss
@@ -4,6 +4,7 @@
 
 $primary-color: #db4545;
 $secondary-color: #555555;
+$terciary-color: #e0e0e0;
 $menu-item-color-hoover: #b53e3e;
 
 $primary-text-color: #ffffff;
