Add Update of the Service Load Pokemon Configuration

--- a/src/app/pokedex/pokedex.component.html
+++ b/src/app/pokedex/pokedex.component.html
@@ -1,7 +1,4 @@
 <div class="component-box">
   <app-pokemon-list [pokemonList]="pokemons"></app-pokemon-list>
-  <app-pokemon-detail
-    class="column-detail"
-    [pokemonObservable]="pokemonObservable"
-  ></app-pokemon-detail>
+  <router-outlet></router-outlet>
 </div>
