--- a/src/app/pokedex/pokemon-list/pokemon-list.component.html
+++ b/src/app/pokedex/pokemon-list/pokemon-list.component.html
@@ -13,8 +13,9 @@
       <img src="./assets/img/glass-search.png" class="search-bar__img" />
       <input class="search-bar__input" type="text" placeholder="Search..." />
     </form>
-
+    <!--List of Pokemons-->
     <div *ngIf="pokemonList != undefined" class="list-elem">
+      <h1>Patata</h1>
       <div
         class="elem"
         (click)="renderPokemon(i)"
