Add Fix Layout Errors

--- a/src/app/pokedex/pokemon-detail/pokemon-detail.component.html
+++ b/src/app/pokedex/pokemon-detail/pokemon-detail.component.html
@@ -1,4 +1,4 @@
 <div class="component-box">
   <app-pokemon-card></app-pokemon-card>
-  <app-pokemon-map [pokemonObservable]="pokemonObservable"></app-pokemon-map>
+  <app-pokemon-map></app-pokemon-map>
 </div>
