--- a/src/app/pokedex/pokedex.component.html
+++ b/src/app/pokedex/pokedex.component.html
@@ -1,4 +1,6 @@
 <div class="component-box">
   <app-pokemon-list [pokemonList]="pokemons"></app-pokemon-list>
-  <router-outlet></router-outlet>
+  <div class="pokemon-detail">
+    <router-outlet></router-outlet>
+  </div>
 </div>
