--- a/src/app/pokedex/pokedex.component.html
+++ b/src/app/pokedex/pokedex.component.html
@@ -1,5 +1,8 @@
 <div class="component-box">
-  <app-pokemon-list [pokemonList]="pokemons"></app-pokemon-list>
+  <app-pokemon-list
+    class="pokemon-list"
+    [pokemonList]="pokemons"
+  ></app-pokemon-list>
   <div class="pokemon-detail">
     <router-outlet></router-outlet>
   </div>
