--- a/src/app/pokedex/pokemon-detail/pokemon-card/pokemon-card.component.scss
+++ b/src/app/pokedex/pokemon-detail/pokemon-card/pokemon-card.component.scss
@@ -153,3 +153,10 @@ table {
 .d-hidden {
   visibility: hidden;
 }
+
+.loading-pokeball {
+  display: block;
+  margin: 0 auto;
+  border-radius: 25px;
+  height: 40px;
+}
