--- a/src/app/pokedex/pokedex.component.html
+++ b/src/app/pokedex/pokedex.component.html
@@ -1,4 +1,4 @@
-<div class="component-box">
+<div class="component-box" *ngIf="pokemonLoaded; else loading">
   <app-pokemon-list
     class="pokemon-list"
     [pokemonList]="pokemons"
@@ -7,3 +7,8 @@
     <router-outlet></router-outlet>
   </div>
 </div>
+<ng-template #loading>
+  <div class="loading-pokeball">
+    <img class="loading-pokeball__gif" src="assets/img/loading-pokeball.gif" />
+  </div>
+</ng-template>
