--- a/src/app/pokedex/pokedex.component.scss
+++ b/src/app/pokedex/pokedex.component.scss
@@ -15,3 +15,15 @@
 .pokemon-detail {
   width: 50%;
 }
+
+.loading-pokeball {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  &__gif {
+    display: block;
+    margin: 0 auto;
+    border-radius: 100px;
+    height: 60px;
+  }
+}
