--- a/src/app/pokedex/pokemon-detail/pokemon-card/pokemon-card.component.html
+++ b/src/app/pokedex/pokemon-detail/pokemon-card/pokemon-card.component.html
@@ -1,4 +1,4 @@
-<div class="shadow" *ngIf="pokemonSelected != undefined; else loading">
+<div class="shadow" *ngIf="pokemonSelected != undefined">
   <div class="container container--general">
     <div class="container container--photo">
       <div class="background-photo">
@@ -38,7 +38,7 @@
       <table>
         <tr *ngFor="let stat of pokemonSelected.stats">
           <td>{{ stat.name }}</td>
-          <td>{{ stat['base-stat'] }}</td>
+          <td>{{ stat.base }}</td>
           <div class="progress-bar">
             <div
               [style.width.%]="stat.base"
@@ -53,6 +53,3 @@
     </div>
   </div>
 </div>
-<ng-template #loading
-  ><img class="loading-pokeball" src="assets/img/loading-pokeball.gif"
-/></ng-template>
