Added dynamic background to pokemon card, and fixed colours steps on pokemon stats bar.

--- a/src/app/pokedex/pokemon-detail/pokemon-card/pokemon-card.component.scss
+++ b/src/app/pokedex/pokemon-detail/pokemon-card/pokemon-card.component.scss
@@ -128,7 +128,7 @@ table {
     background-color: #ad8c33;
   }
   &--ice {
-    background-color: #efefef;
+    background-color: #c9d9dd;
   }
   &--rock {
     background-color: #9e863d;
