--- a/src/app/pokedex/pokemon-detail/pokemon-card/pokemon-card.component.html
+++ b/src/app/pokedex/pokemon-detail/pokemon-card/pokemon-card.component.html
@@ -1,5 +1,8 @@
 <div class="shadow" *ngIf="pokemonSelected != undefined">
-  <div class="container container--general">
+  <div
+    class="container container--general"
+    [style.background-color]="colorBackground(pokemonSelected.type[0])"
+  >
     <div class="container container--photo">
       <div class="background-photo">
         <img
