Fixed typo error and change default background color on pokemon card.

--- a/src/app/pokedex/pokemon-detail/pokemon-card/pokemon-card.component.scss
+++ b/src/app/pokedex/pokemon-detail/pokemon-card/pokemon-card.component.scss
@@ -27,7 +27,7 @@ h2 {
 
   &--general {
     border-radius: $radius;
-    background-color: #6fad6e; //pending from Javascript Service
+    background-color: #9b9b9b; //pending from Javascript Service
   }
 
   &--info {
