--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,13 +8,13 @@
   <nav class="menu">
     <a
       class="menu__item"
-      [routerLink]="['/landing']"
+      routerLink="/landing"
       routerLinkActive="menu__item--active"
       >Home</a
     >
     <a
       class="menu__item"
-      [routerLink]="['/pokedex']"
+      routerLink="/pokedex"
       routerLinkActive="menu__item--active"
       >Pokedex</a
     >
