Fixed width length of stats bar in pokemon card

--- a/src/app/pokedex/pokemon-detail/pokemon-card/pokemon-card.component.scss
+++ b/src/app/pokedex/pokemon-detail/pokemon-card/pokemon-card.component.scss
@@ -2,12 +2,12 @@
 $radius: 2em;
 
 //Text General
-h1 {
+.titulo {
   font-size: 3em; //Pending general styles
   font-weight: bold; ////Pending general styles
 }
 
-h2 {
+.subtitulo {
   color: white;
   font-weight: bolder;
   margin: 0.3em 0;
