Added Pipe to Search on component list, We have to fix the system of passing id to URL in order to find a specific pokemon

--- a/src/app/pokedex/pokemon-list/pokemon-list.component.html
+++ b/src/app/pokedex/pokemon-list/pokemon-list.component.html
@@ -24,7 +24,10 @@
 			<div
 				class="elem"
 				(click)="renderPokemon(i)"
-				*ngFor="let elem of pokemonList; index as i"
+				*ngFor="
+					let elem of pokemonList | searcherFilter: searchPokemonName;
+					index as i
+				"
 			>
 				<span class="elem__id">{{ elem.id }}</span>
 				<div class="elem__info">
