Fixed logic on pokemon list to render on single pokemon, now rendersPokemon method passes the id element -1

--- a/src/app/pokedex/pokemon-list/pokemon-list.component.html
+++ b/src/app/pokedex/pokemon-list/pokemon-list.component.html
@@ -23,7 +23,7 @@
 		<div *ngIf="pokemonList != undefined" class="list-elem">
 			<div
 				class="elem"
-				(click)="renderPokemon(i)"
+				(click)="renderPokemon(elem.id - 1)"
 				*ngFor="
 					let elem of pokemonList | searcherFilter: searchPokemonName;
 					index as i
