--- a/src/app/pokedex/pokemon-list/pokemon-list.component.scss
+++ b/src/app/pokedex/pokemon-list/pokemon-list.component.scss
@@ -3,7 +3,7 @@
 .component-box {
 	display: flex;
 	flex-direction: column;
-	justify-content: space-evenly;
+	justify-content: flex-start;
 	align-items: center;
 	width: 100%;
 	height: 100%;
