Added SVG icons pokemon.detail, Changed Font to Roboto Condensed, Change width on pokemon detail

--- a/src/app/pokedex/pokemon-detail/pokemon-detail.component.html
+++ b/src/app/pokedex/pokemon-detail/pokemon-detail.component.html
@@ -1,4 +1,22 @@
-<div class="component-box">
-  <app-pokemon-card></app-pokemon-card>
-  <app-pokemon-map></app-pokemon-map>
+<div class="container-box">
+	<div class="component-box">
+		<div class="container-btn">
+			<h2 class="btn btn--first">
+				<img
+					src="./../../../assets/img/iconPokeData.svg"
+					alt="Icon Pokemon Data"
+				/>DATA
+			</h2>
+		</div>
+		<app-pokemon-card></app-pokemon-card>
+		<div class="container-btn">
+			<h2 class="btn">
+				<img
+					src="./../../../assets/img/iconPointerMap.svg"
+					alt="Icon pointer map"
+				/>LOCATION
+			</h2>
+		</div>
+		<app-pokemon-map></app-pokemon-map>
+	</div>
 </div>
