--- a/src/app/pokedex/pokemon-detail/pokemon-card/pokemon-card.component.scss
+++ b/src/app/pokedex/pokemon-detail/pokemon-card/pokemon-card.component.scss
@@ -22,7 +22,7 @@ $radius: 2em;
 	padding: 0.5em;
 	background-color: rgba(0, 0, 0, 0.37);
 	border-radius: 2em;
-	margin-bottom: 2em;
+	// margin-bottom: 2em;
 }
 
 //Containers
