Add button on main section

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -14,8 +14,11 @@
 		<img class="main-left__bubble" src="../../assets/img/pokemon-bubble.png" />
 	</div>
 	<div class="main-right">
-		<div class="button-twist"></div>
-		<a class="button-twist__link" href="">Find your pokemon!</a>
+		<!-- <a class="main-right__link" href="">Find your pokemon!</a>
+    <div class="main-right__button"></div> -->
+		<a class="main-right__button"
+			><span class="quote"></span> Find your Pokemon</a
+		>
 	</div>
 </section>
 
@@ -26,11 +29,11 @@
 			<div class="card-inner">
 				<div class="card-front">
 					<img class="card-image" src="../../assets/img/person-icon.png" />
-					<h1>Jose Angel Cívico Martín</h1>
+					<h1>Jose Angel Cívico Martos</h1>
 				</div>
 				<div class="card-back">
 					<br /><br />
-					<h1>Jose Angel Cívico Martín</h1>
+					<h1>Jose Angel Cívico Martos</h1>
 					<p>Software Developer</p>
 				</div>
 			</div>
