--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -17,7 +17,7 @@
 .main-left {
 	position: absolute;
 	left: 30px;
-	bottom: 100px;
+	bottom: 70px;
 	&__image {
 		display: inline-block;
 		width: 100%;
@@ -52,28 +52,96 @@
 
 .main-right {
 	position: absolute;
-	flex: 1;
-	width: 100%;
-	height: 50%;
-	top: 68%;
-	left: 79%;
-}
-
-.button-twist {
-	background: $primary-color;
-	width: 20%;
-	height: 40%;
-	border-radius: 43%;
-	opacity: 0.8;
-	animation: drift 3000ms infinite linear;
-	&__link {
-		width: 10%;
-		height: 10%;
-		margin-top: 0em 3em;
-		text-align: center;
-		font-size: 18px;
+	bottom: 80px;
+	right: 135px;
+	&__button {
+		cursor: pointer;
+		display: inline-block;
+		padding: 0.75rem 1.25rem;
+		border-radius: 10px;
+		color: #fff;
 		font-weight: bold;
+		text-transform: uppercase;
+		font-size: 20px;
+		letter-spacing: 0.15rem;
+		transition: all 0.3s;
+		position: relative;
+		overflow: hidden;
+		z-index: 1;
+		.quote {
+			&:before {
+				content: '»';
+				position: absolute;
+				left: -30px;
+				opacity: 0;
+				transition: all 0.4s;
+			}
+			&:after {
+				content: '»';
+				position: absolute;
+				left: 8px;
+				opacity: 1;
+				transition: all 0.4s;
+			}
+		}
+		&:after {
+			content: '';
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			background-color: $primary-color;
+			border-radius: 10px;
+			z-index: -2;
+		}
+		&:before {
+			content: '';
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			width: 0%;
+			height: 100%;
+			background-color: $terciary-color;
+			transition: all 0.3s;
+			border-radius: 10px;
+			z-index: -1;
+		}
+		&:hover {
+			color: $secondary-color;
+			&:before {
+				width: 100%;
+			}
+			.quote:before {
+				content: '»';
+				position: absolute;
+				left: 8px;
+				opacity: 1;
+			}
+			.quote:after {
+				content: '»';
+				position: absolute;
+				left: 15px;
+				opacity: 0;
+			}
+		}
 	}
+	// &__button{
+	//     background: $primary-color;
+	//     width: 180px;
+	//     height: 180px;
+	//     border-radius: 40%;
+	//     opacity: 0.8;
+	//     animation: drift 3000ms infinite linear;
+	// }
+	// &__link {
+	//     color: white;
+	//     display: block;
+	//     margin: 0 auto;
+	//     text-align: center;
+	//     font-size: 18px;
+	//     font-weight: bold;
+	// }
 }
 
 @keyframes drift {
