--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,48 +1,49 @@
 @import '../../commonStyles.scss';
 
 .header {
-  display: flex;
-  justify-content: space-between;
-  position: sticky;
-  width: 100%;
-  height: 70px;
-  background-color: $primary-color;
+	display: flex;
+	justify-content: space-between;
+	position: sticky;
+	top: 0;
+	width: 100%;
+	height: 70px;
+	background-color: $primary-color;
 }
 
 .logo {
-  object-fit: contain;
-  padding-left: 5%;
+	object-fit: contain;
+	padding-left: 5%;
 }
 
 .menu {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  text-align: center;
-  padding-right: 5%;
-  height: 100%;
-  width: 40%;
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+	text-align: center;
+	padding-right: 5%;
+	height: 100%;
+	width: 40%;
 
-  &__item {
-    text-decoration: none;
-    color: white;
-    font-size: 1.4rem;
-    font-weight: 500;
-    transition: padding 0.5s;
+	&__item {
+		text-decoration: none;
+		color: white;
+		font-size: 1.4rem;
+		font-weight: 500;
+		transition: padding 0.5s;
 
-    &:hover {
-      background-color: $menu-item-color-hoover;
-      font-size: 1.6rem;
-      padding: 20px;
-      //   box-shadow: 0 0 5px 5px gray;
-      border-radius: 15px;
-    }
+		&:hover {
+			background-color: $menu-item-color-hoover;
+			font-size: 1.6rem;
+			padding: 20px;
+			//   box-shadow: 0 0 5px 5px gray;
+			border-radius: 15px;
+		}
 
-    &--active {
-      font-size: 1.6rem;
-      padding: 20px;
-      border-radius: 15px;
-      background-color: $menu-item-color-hoover;
-    }
-  }
+		&--active {
+			font-size: 1.6rem;
+			padding: 20px;
+			border-radius: 15px;
+			background-color: $menu-item-color-hoover;
+		}
+	}
 }
