--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -25,23 +25,15 @@
 	height: 35%;
 }
 .main-image2 {
-	margin: 2em 0em;
+	margin: 1em 1em;
 	width: 60%;
-	height: 30%;
-	&--text {
-		position: absolute;
-		top: 22%;
-		left: 27%;
-		font-size: 20px;
-		font-weight: bold;
-		text-transform: uppercase;
-	}
+	height: 40%;
 }
 
 .main-right {
 	position: absolute;
-	width: 50%;
-	height: 50%;
+	width: 20%;
+	height: 20%;
 	top: 68%;
 	left: 79%;
 }
@@ -64,7 +56,9 @@
 }
 
 .main-wave {
-	margin: 13em 0em 0em 0em;
+	display: inline-block;
+	width: 100%;
+	overflow: hidden;
 }
 
 @keyframes drift {
@@ -75,36 +69,51 @@
 		transform: rotate(360deg);
 	}
 }
-
 .main-down {
 	display: flex;
-	flex-flow: column;
-	height: 93vh;
+	flex-direction: column;
+	width: 100%;
+	height: auto;
+	background-color: $primary-color;
+	overflow: hidden;
+}
+
+.main-down-title {
+	width: auto;
+	height: 12%;
+	text-align: center;
 	background-color: $primary-color;
 }
-.personal-info-up {
+.main-down-info {
 	display: flex;
-	flex-direction: row;
+	flex-flow: row wrap;
 	justify-content: space-between;
-	width: 80vw;
-	height: 50vh;
+	width: 100%;
+	height: auto;
 	background-color: $primary-color;
-	margin: 0em 9em;
 }
-.personal-info-down {
+.card-container {
 	display: flex;
-	flex-flow: row;
 	justify-content: center;
-	width: 80vw;
-	height: 50vh;
+	flex-grow: 1;
+	margin: 1em;
+}
+.main-down-info-first {
+	display: flex;
+	flex-wrap: wrap;
+	width: 100%;
+}
+.main-down-info-second {
+	display: flex;
+	flex-wrap: wrap;
+	width: 100%;
+	height: auto;
 	background-color: $primary-color;
-	margin: 0em 8em;
 }
 .card {
 	background-color: transparent;
-	width: 300px;
-	height: 200px;
-	margin: 3em;
+	width: 400px;
+	height: 300px;
 }
 .card-inner {
 	position: relative;
@@ -128,26 +137,25 @@
 	background-color: none;
 }
 .card-back {
-	background-color: none;
+	background-color: rgba(85, 85, 85, 0.5);
 	color: white;
 	transform: rotateY(180deg);
 }
 .card-image {
 	width: 70%;
-	height: 96%;
+	height: auto;
 	border-radius: 50%;
-	margin: 0 3em;
 }
 h1,
 p {
-	width: 96%;
+	width: 100%;
 	height: 23%;
-	font-size: 20px;
+	font-size: 24px;
 	text-align: center;
 	color: white;
 }
 .title {
-	width: 96%;
+	width: 100%;
 	height: 23%;
 	font-size: 40px;
 	text-align: center;
