--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -5,7 +5,7 @@
 	justify-content: space-between;
 	position: sticky;
 	width: 100%;
-	height: 70px;
+	height: 50px;
 	background-color: $primary-color;
 }
 
@@ -26,23 +26,19 @@
 	&__item {
 		text-decoration: none;
 		color: white;
-		font-size: 1.4rem;
+		font-size: 1.1rem;
 		font-weight: 500;
 		transition: padding 0.5s;
+		padding: 16px;
 
 		&:hover {
-			background-color: $menu-item-color-hoover;
-			font-size: 1.6rem;
-			padding: 20px;
-			//   box-shadow: 0 0 5px 5px gray;
-			border-radius: 15px;
+			// background-color: $menu-item-color-hoover;
+			font-weight: 700;
 		}
 
 		&--active {
-			font-size: 1.6rem;
-			padding: 20px;
-			border-radius: 15px;
-			background-color: $menu-item-color-hoover;
+			// background-color: $menu-item-color-hoover;
+			font-weight: 700;
 		}
 	}
 }
