--- a/src/app/pokedex/pokedex.component.scss
+++ b/src/app/pokedex/pokedex.component.scss
@@ -5,7 +5,7 @@
 	flex-direction: row;
 	justify-content: space-around;
 	width: 100vw;
-	height: calc(100vh-140px);
+	// height: calc(100vh-140px);
 }
 
 .pokemon-list {
