--- a/src/app/pokedex/pokemon-list/pokemon-list.component.scss
+++ b/src/app/pokedex/pokemon-list/pokemon-list.component.scss
@@ -17,25 +17,25 @@
 	background-color: $secondary-color;
 	border-radius: 20px;
 	padding: 5px;
-	margin: 30px 0;
+	margin: 15px 0px 10px 0px;
 	font-size: 7rem;
 	font-weight: 700;
 
 	&__title {
-		font-size: 2rem;
+		font-size: 1.5rem;
 		font-family: 'Roboto Condensed';
 		color: white;
 		margin-left: 20px;
 		text-transform: uppercase;
 		&::first-letter {
-			font-size: 2.5rem;
+			font-size: 2rem;
 		}
 	}
 }
 
 .logo {
-	height: 50px;
-	margin: 10px;
+	height: 40px;
+	margin: 5px;
 }
 
 .list-container {
@@ -56,7 +56,7 @@
 	border-radius: 10px;
 	width: 80%;
 	padding: 5px;
-	margin: 30px 0;
+	margin: 15px 0 10px 0;
 
 	&__img {
 		width: 20px;
@@ -77,7 +77,7 @@
 	max-height: 60vh;
 	width: 80%;
 	overflow-y: scroll;
-	margin-bottom: 50px;
+	margin-bottom: 25px;
 
 	&::-webkit-scrollbar {
 		width: 15px;
@@ -105,10 +105,11 @@
 .elem {
 	display: flex;
 	flex-direction: row;
-	padding: 6px;
+	padding-right: 6px;
 	margin: 10px 0;
-	height: 70px;
+	height: 60px;
 	color: white;
+	cursor: pointer;
 
 	&__id {
 		display: flex;
