--- a/src/app/pokedex/pokemon-detail/pokemon-detail.component.scss
+++ b/src/app/pokedex/pokemon-detail/pokemon-detail.component.scss
@@ -4,7 +4,7 @@
 	display: flex;
 	flex-direction: column;
 	height: 100%;
-	width: 100%;
+	//width: 100%;
 	background-color: #db4545;
 	border-radius: 20px;
 	padding: 2rem;
