footer changed in order to be 100vw and main-footer too

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,36 +1,36 @@
 <footer class="footer">
 	<img
-		class="footer__decorator--main"
+		class="pokeball-img"
 		src="../../assets/img/pokeball-logo.png"
 		alt="Logo Pokeball"
 	/>
 	<img
-		class="footer__decorator--secondary"
+		class="pokemon-img"
 		src="../../assets/img/pikachu-footer.png"
 		alt="Pikachu"
 	/>
 	<img
-		class="footer__decorator--secondary"
+		class="pokemon-img"
 		src="../../assets/img/blastoise-footer.png"
 		alt="Blastoise"
 	/>
 	<img
-		class="footer__title"
+		class="title"
 		src="../../assets/img/pokedexApi-footer.png"
 		alt="Logo PokedexApi"
 	/>
 	<img
-		class="footer__decorator--secondary"
+		class="pokemon-img"
 		src="../../assets/img/ghost-footer.png"
 		alt="Ghost"
 	/>
 	<img
-		class="footer__decorator--secondary"
+		class="pokemon-img"
 		src="../../assets/img/charizard-footer.png"
 		alt="Charizard"
 	/>
 	<img
-		class="footer__decorator--main"
+		class="pokeball-img"
 		src="../../assets/img/pokeball-logo.png"
 		alt="Logo Pokeball"
 	/>
