--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -18,6 +18,6 @@
 			routerLinkActive="menu__item--active"
 			>Pokedex</a
 		>
-		<a class="menu__item" href="#">About us</a>
+		<a class="menu__item" href="#main-down">About us</a>
 	</nav>
 </header>
