--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,19 +1,26 @@
 @import '../../commonStyles.scss';
 
 .footer {
+	box-sizing: border-box;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-evenly;
 	align-items: center;
-	width: 100%;
+	width: 100vw;
 	background-color: $secondary-color;
 	color: white;
 	height: 70px;
 	padding: 5px;
 
-	img {
+	&__decorator {
 		max-height: 25px;
 	}
+}
+
+.pokeball-img,
+.pokemon-img {
+	height: 90%;
+	width: auto;
 }
 
 @media only screen and (max-width: 480px) {
