--- a/src/app/pokedex/pokedex.component.html
+++ b/src/app/pokedex/pokedex.component.html
@@ -3,7 +3,7 @@
 		class="pokemon-list"
 		[pokemonList]="pokemons"
 	></app-pokemon-list>
-	<div class="pokemon-detail">
+	<div class="pokemon-detail" style="display: none;">
 		<router-outlet></router-outlet>
 	</div>
 </div>
