--- a/src/app/pokedex/pokedex.component.scss
+++ b/src/app/pokedex/pokedex.component.scss
@@ -4,8 +4,7 @@
 	display: flex;
 	flex-direction: row;
 	justify-content: space-around;
-	width: 100vw;
-	// height: calc(100vh-140px);
+	height: 100%;
 }
 
 .pokemon-list {
