--- a/src/app/pokedex/pokemon-detail/pokemon-detail.component.html
+++ b/src/app/pokedex/pokemon-detail/pokemon-detail.component.html
@@ -1,22 +1,8 @@
 <div class="container-box">
 	<div class="component-box">
-		<div class="container-btn">
-			<h2 class="btn btn--first">
-				<img
-					src="./../../../assets/img/iconPokeData.svg"
-					alt="Icon Pokemon Data"
-				/>DATA
-			</h2>
+		<div class="shadow">
+			<app-pokemon-card></app-pokemon-card>
+			<app-pokemon-map></app-pokemon-map>
 		</div>
-		<app-pokemon-card></app-pokemon-card>
-		<div class="container-btn">
-			<h2 class="btn">
-				<img
-					src="./../../../assets/img/iconPointerMap.svg"
-					alt="Icon pointer map"
-				/>LOCATION
-			</h2>
-		</div>
-		<app-pokemon-map></app-pokemon-map>
 	</div>
 </div>
