--- a/src/app/pokedex/pokemon-detail/pokemon-map/pokemon-map.component.html
+++ b/src/app/pokedex/pokemon-detail/pokemon-map/pokemon-map.component.html
@@ -1,2 +1,10 @@
+<div class="container-btn">
+	<h2 class="btn">
+		<img
+			src="./../../../assets/img/iconPointerMap.svg"
+			alt="Icon pointer map"
+		/>LOCATION
+	</h2>
+</div>
 <div id="map" class="map"></div>
 <button (click)="changePokemon()">Cambia pokemon</button>
