--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -11,11 +11,10 @@
 
 	<div class="main-left">
 		<img class="main-left__image" src="../../assets/img/pokemon-prof.png" />
-		<img class="main-left__bubble" src="../../assets/img/pokemon-bubble.png" />
+		<img class="main-left__pokemon" [src]="imgSource" alt="" />
+		<!-- <img class="main-left__bubble" src="../../assets/img/pokemon-bubble.png" /> -->
 	</div>
 	<div class="main-right">
-		<!-- <a class="main-right__link" href="">Find your pokemon!</a>
-    <div class="main-right__button"></div> -->
 		<a class="main-right__button"
 			><span class="quote"></span> Find your Pokemon</a
 		>
