Modify card of bottom landing page

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -37,7 +37,8 @@
 						</div>
 						<div class="card-back">
 							<br /><br />
-							<h1>Jose Angel Cívico Martín</h1>
+							<br /><br />
+							<p>Jose Angel Cívico Martín</p>
 							<p>Software Developer</p>
 						</div>
 					</div>
@@ -52,7 +53,8 @@
 						</div>
 						<div class="card-back">
 							<br /><br />
-							<h1>Gabriel García Garrido</h1>
+							<br /><br />
+							<p>Gabriel García Garrido</p>
 							<p>Software Developer</p>
 						</div>
 					</div>
@@ -67,7 +69,8 @@
 						</div>
 						<div class="card-back">
 							<br /><br />
-							<h1>Guadalupe García Plaza</h1>
+							<br /><br />
+							<p>Guadalupe García Plaza</p>
 							<p>Software Developer</p>
 						</div>
 					</div>
@@ -85,7 +88,8 @@
 						</div>
 						<div class="card-back">
 							<br /><br />
-							<h1>Jose Luis Aguilar Gómez</h1>
+							<br /><br />
+							<p>Jose Luis Aguilar Gómez</p>
 							<p>Software Developer</p>
 						</div>
 					</div>
@@ -100,7 +104,8 @@
 						</div>
 						<div class="card-back">
 							<br /><br />
-							<h1>Juan Pablo Amador Díaz</h1>
+							<br /><br />
+							<p>Juan Pablo Amador Díaz</p>
 							<p>Software Developer</p>
 						</div>
 					</div>
