--- a/src/app/pokedex/pokemon-list/pokemon-list.component.scss
+++ b/src/app/pokedex/pokemon-list/pokemon-list.component.scss
@@ -4,9 +4,10 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
-	align-items: center;
+	// align-items: center;
 	width: 100%;
 	height: 100%;
+	padding: 10px;
 }
 
 .title-box {
