testing new husky rule

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -11,11 +11,10 @@
 
 	<div class="main-left">
 		<img class="main-left__image" src="../../assets/img/pokemon-prof.png" />
-		<img class="main-left__bubble" src="../../assets/img/pokemon-bubble.png" />
+		<img class="main-left__pokemon" [src]="imgSource" alt="" />
+		<!-- <img class="main-left__bubble" src="../../assets/img/pokemon-bubble.png" /> -->
 	</div>
 	<div class="main-right">
-		<!-- <a class="main-right__link" href="">Find your pokemon!</a>
-    <div class="main-right__button"></div> -->
 		<a class="main-right__button"
 			><span class="quote"></span> Find your Pokemon</a
 		>
@@ -37,7 +36,8 @@
 						</div>
 						<div class="card-back">
 							<br /><br />
-							<h1>Jose Angel Cívico Martín</h1>
+							<br /><br />
+							<p>Jose Angel Cívico Martín</p>
 							<p>Software Developer</p>
 						</div>
 					</div>
@@ -52,7 +52,8 @@
 						</div>
 						<div class="card-back">
 							<br /><br />
-							<h1>Gabriel García Garrido</h1>
+							<br /><br />
+							<p>Gabriel García Garrido</p>
 							<p>Software Developer</p>
 						</div>
 					</div>
@@ -67,7 +68,8 @@
 						</div>
 						<div class="card-back">
 							<br /><br />
-							<h1>Guadalupe García Plaza</h1>
+							<br /><br />
+							<p>Guadalupe García Plaza</p>
 							<p>Software Developer</p>
 						</div>
 					</div>
@@ -85,7 +87,8 @@
 						</div>
 						<div class="card-back">
 							<br /><br />
-							<h1>Jose Luis Aguilar Gómez</h1>
+							<br /><br />
+							<p>Jose Luis Aguilar Gómez</p>
 							<p>Software Developer</p>
 						</div>
 					</div>
@@ -100,7 +103,8 @@
 						</div>
 						<div class="card-back">
 							<br /><br />
-							<h1>Juan Pablo Amador Díaz</h1>
+							<br /><br />
+							<p>Juan Pablo Amador Díaz</p>
 							<p>Software Developer</p>
 						</div>
 					</div>
