--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,16 +8,17 @@
 	<nav class="menu">
 		<a
 			class="menu__item"
-			routerLink="/landing"
-			routerLinkActive="menu__item--active"
-			>Home</a
-		>
-		<a
-			class="menu__item"
 			routerLink="/pokedex"
 			routerLinkActive="menu__item--active"
 			>Pokedex</a
 		>
+		<a
+			class="menu__item"
+			routerLink="/landing"
+			routerLinkActive="menu__item--active"
+			>Home</a
+		>
+		<a class="menu__item" href="#main-down">Info</a>
 		<a class="menu__item" href="#main-down">About us</a>
 	</nav>
 </header>
