--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -3,7 +3,9 @@
 .header {
 	display: flex;
 	justify-content: space-between;
-	position: sticky;
+	position: fixed;
+	top: 0;
+	z-index: 10;
 	width: 100%;
 	height: 50px;
 	background-color: $primary-color;
