--- a/src/app/pokedex/pokemon-detail/pokemon-detail.component.html
+++ b/src/app/pokedex/pokemon-detail/pokemon-detail.component.html
@@ -1,4 +1,4 @@
-<div class="container-box">
+<div class="container-box" *ngIf="pokemonSelected">
 	<div class="component-box">
 		<div class="container-btn">
 			<h2 class="btn btn--first">
@@ -8,7 +8,7 @@
 				/>DATA
 			</h2>
 		</div>
-		<app-pokemon-card></app-pokemon-card>
+		<app-pokemon-card [pokemonSelected]="pokemonSelected"></app-pokemon-card>
 		<div class="container-btn">
 			<h2 class="btn">
 				<img
@@ -17,6 +17,13 @@
 				/>LOCATION
 			</h2>
 		</div>
-		<app-pokemon-map></app-pokemon-map>
+		<app-pokemon-map [pokemonSelected]="pokemonSelected"></app-pokemon-map>
 	</div>
+</div>
+<div class="container-box">
+	<img
+		src="../../../assets/img/pikachu-search.png"
+		alt="Unselected picture"
+		class="unSelectedPokemon"
+	/>
 </div>
