--- a/src/app/pokedex/pokemon-detail/pokemon-detail.component.html
+++ b/src/app/pokedex/pokemon-detail/pokemon-detail.component.html
@@ -1,8 +1,12 @@
 <div class="container-box">
 	<div class="component-box">
 		<div class="shadow">
-			<app-pokemon-card></app-pokemon-card>
-			<app-pokemon-map></app-pokemon-map>
+			<div class="container">
+				<app-pokemon-card></app-pokemon-card>
+			</div>
+			<div class="container">
+				<app-pokemon-map></app-pokemon-map>
+			</div>
 		</div>
 	</div>
 </div>
