--- a/src/app/pokedex/pokemon-detail/pokemon-detail.component.scss
+++ b/src/app/pokedex/pokemon-detail/pokemon-detail.component.scss
@@ -15,7 +15,13 @@
 
 //Shadow
 .shadow {
+	display: flex;
+	width: 100%;
 	padding: 0.5em;
 	background-color: rgba(0, 0, 0, 0.37);
 	border-radius: 2em;
+}
+
+.container {
+	width: 50%;
 }
