--- a/src/app/pokedex/pokemon-detail/pokemon-map/pokemon-map.component.html
+++ b/src/app/pokedex/pokemon-detail/pokemon-map/pokemon-map.component.html
@@ -1,5 +1,5 @@
 <div class="container-btn">
-	<h2 class="btn">
+	<h2 class="btn btn--first">
 		<img
 			src="./../../../assets/img/iconPointerMap.svg"
 			alt="Icon pointer map"
