map component cannot work with Input refering to the selectedPokemon variable. It is required to use a subscriber to the routing params

--- a/src/app/pokedex/pokemon-detail/pokemon-detail.component.html
+++ b/src/app/pokedex/pokemon-detail/pokemon-detail.component.html
@@ -17,7 +17,7 @@
 				/>LOCATION
 			</h2>
 		</div>
-		<app-pokemon-map [pokemonSelected]="pokemonSelected"></app-pokemon-map>
+		<app-pokemon-map></app-pokemon-map>
 	</div>
 </div>
 <div class="container-box">
