--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -22,96 +22,99 @@
 	</div>
 </section>
 
-<section class="main-down">
-	<div class="main-down-title">
-		<p class="title">our team</p>
+<section class="main-bottom">
+	<div class="header">
+		<p class="header__title">our team</p>
 	</div>
-	<div class="main-down-info">
-		<div class="main-down-info-first">
-			<div class="card-container">
-				<div class="card">
-					<div class="card-inner">
-						<div class="card-front">
-							<img class="card-image" src="../../assets/img/person-icon.png" />
-							<h1>Jose Angel Cívico Martín</h1>
+	<div class="info">
+		<div class="info__top">
+			<div class="card">
+				<div class="card__container">
+					<div class="card__inner">
+						<div class="card__front">
+							<img class="card__image" src="../../assets/img/person-icon.png" />
+							<h3 class="card__front--text">Jose Angel Cívico Martos</h3>
 						</div>
-						<div class="card-back">
+						<div class="card__back">
 							<br /><br />
 							<br /><br />
-							<p>Jose Angel Cívico Martín</p>
-							<p>Software Developer</p>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="card-container">
-				<div class="card">
-					<div class="card-inner">
-						<div class="card-front">
-							<img class="card-image" src="../../assets/img/person-icon.png" />
-							<h1>Gabriel García Garrido</h1>
-						</div>
-						<div class="card-back">
-							<br /><br />
-							<br /><br />
-							<p>Gabriel García Garrido</p>
-							<p>Software Developer</p>
+							<p class="card__back--text">Jose Angel Cívico Martos</p>
+							<p class="card__back--text">Software Developer</p>
 						</div>
 					</div>
 				</div>
 			</div>
-			<div class="card-container">
-				<div class="card">
-					<div class="card-inner">
-						<div class="card-front">
-							<img class="card-image" src="../../assets/img/person-icon.png" />
-							<h1>Guadalupe García Plaza</h1>
+			<div class="card">
+				<div class="card__container">
+					<div class="card__inner">
+						<div class="card__front">
+							<img class="card__image" src="../../assets/img/person-icon.png" />
+							<h3 class="card__front--text">Gabriel García Rodríguez</h3>
 						</div>
-						<div class="card-back">
+						<div class="card__back">
 							<br /><br />
 							<br /><br />
-							<p>Guadalupe García Plaza</p>
-							<p>Software Developer</p>
+							<p class="card__back--text">Gabriel García Rodríguez</p>
+							<p class="card__back--text">Software Developer</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="card">
+				<div class="card__container">
+					<div class="card__inner">
+						<div class="card__front">
+							<img class="card__image" src="../../assets/img/person-icon.png" />
+							<h3 class="card__front--text">Guadalupe García Plaza</h3>
+						</div>
+						<div class="card__back">
+							<br /><br />
+							<br /><br />
+							<p class="card__back--text">Guadalupe García Plaza</p>
+							<p class="card__back--text">Software Developer</p>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-		<div class="main-down-info-second">
-			<div class="card-container"></div>
-			<div class="card-container">
-				<div class="card">
-					<div class="card-inner">
-						<div class="card-front">
-							<img class="card-image" src="../../assets/img/person-icon.png" />
-							<h1>Jose Luis Aguilar Gómez</h1>
+		<div class="info__bottom">
+			<div class="card"></div>
+			<div class="card">
+				<div class="card__container">
+					<div class="card__inner">
+						<div class="card__front">
+							<img
+								class="card__image"
+								src="../../assets/img/guybrush_small.jpg"
+							/>
+							<h3 class="card__front--text">Jose Luis Aguilar Gómez</h3>
 						</div>
-						<div class="card-back">
+						<div class="card__back">
 							<br /><br />
 							<br /><br />
-							<p>Jose Luis Aguilar Gómez</p>
-							<p>Software Developer</p>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="card-container">
-				<div class="card">
-					<div class="card-inner">
-						<div class="card-front">
-							<img class="card-image" src="../../assets/img/person-icon.png" />
-							<h1>Juan Pablo Amador Díaz</h1>
-						</div>
-						<div class="card-back">
-							<br /><br />
-							<br /><br />
-							<p>Juan Pablo Amador Díaz</p>
-							<p>Software Developer</p>
+							<p class="card__back--text">Jose Luis Aguilar Gómez</p>
+							<p class="card__back--text">Software Developer</p>
 						</div>
 					</div>
 				</div>
 			</div>
-			<div class="card-container"></div>
+			<div class="card">
+				<div class="card__container">
+					<div class="card__inner">
+						<div class="card__front">
+							<img class="card__image" src="../../assets/img/person-icon.png" />
+							<h3 class="card__front--text">Juan Pablo Amador Díaz</h3>
+						</div>
+						<div class="card__back">
+							<br /><br />
+							<br /><br />
+							<p class="card__back--text">Juan Pablo Amador Díaz</p>
+							<p class="card__back--text">Software Developer</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="card"></div>
 		</div>
 	</div>
 </section>
