--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -145,7 +145,7 @@
 		transform: rotate(360deg);
 	}
 }
-.main-down {
+.main-bottom {
 	display: flex;
 	flex-direction: column;
 	width: 100%;
@@ -153,105 +153,104 @@
 	background-color: $primary-color;
 	overflow: hidden;
 }
-
-.main-down-title {
+.header {
 	width: auto;
 	height: 12%;
 	text-align: center;
 	background-color: $primary-color;
+	&__title {
+		width: 100%;
+		height: 23%;
+		font-size: 40px;
+		text-align: center;
+		text-transform: uppercase;
+		color: white;
+		margin-top: 1em;
+	}
 }
-.main-down-info {
+.info {
 	display: flex;
 	flex-flow: row wrap;
 	justify-content: space-between;
 	width: 100%;
 	height: auto;
 	background-color: $primary-color;
+	&__top {
+		display: flex;
+		flex-wrap: wrap;
+		width: 100%;
+		margin: 1em 0em;
+	}
+	&__bottom {
+		display: flex;
+		flex-wrap: wrap;
+		width: 100%;
+		height: auto;
+		margin: 1em 0em;
+		background-color: $primary-color;
+	}
 }
-.card-container {
+
+.card {
 	display: flex;
 	justify-content: center;
 	flex-grow: 1;
-}
-.main-down-info-first {
-	display: flex;
-	flex-wrap: wrap;
-	width: 100%;
-	margin: 2em 0em;
-}
-.main-down-info-second {
-	display: flex;
-	flex-wrap: wrap;
-	width: 100%;
-	height: auto;
-	margin: 2em 0em;
-	background-color: $primary-color;
-}
-.card {
-	background-color: transparent;
-	width: 350px;
-	height: 250px;
-}
-.card-inner {
-	position: relative;
-	width: 100%;
-	height: 100%;
-	text-align: center;
-	transition: transform 0.8s;
-	transform-style: preserve-3d;
-}
-.card:hover .card-inner {
-	transform: rotateY(180deg);
-}
-.card-front,
-.card-back {
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	backface-visibility: hidden;
-}
-.card-front {
-	background-color: none;
-}
-.card-back {
-	background-color: rgba(85, 85, 85, 0.5);
-	background-image: url(../../assets/img/pokeball-bg.svg);
-	background-repeat: no-repeat;
-	background-size: 60%;
-	background-position: 0 100%;
-	color: white;
-	width: 300px;
-	height: 300px;
-	border-radius: 50%;
-	transform: rotateY(180deg);
-}
-.card-image {
-	width: 70%;
-	height: auto;
-	border-radius: 50%;
-}
-h1 {
-	width: 100%;
-	height: 23%;
-	font-size: 24px;
-	text-align: center;
-	color: white;
-}
-p {
-	width: 100%;
-	height: 23%;
-	font-size: 22px;
-	text-align: center;
-	color: white;
-}
-.title {
-	width: 100%;
-	height: 23%;
-	font-size: 40px;
-	text-align: center;
-	text-transform: uppercase;
-	color: white;
-	margin-top: 1em;
+	&__container {
+		background-color: transparent;
+		width: 350px;
+		height: 250px;
+	}
+	&__inner {
+		position: relative;
+		width: 100%;
+		height: 100%;
+		text-align: center;
+		transition: transform 0.8s;
+		transform-style: preserve-3d;
+		&:hover {
+			transform: rotateY(180deg);
+		}
+	}
+	&__front {
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		backface-visibility: hidden;
+		background-color: none;
+		&--text {
+			width: 100%;
+			height: 23%;
+			font-size: 24px;
+			text-align: center;
+			color: white;
+		}
+	}
+	&__back {
+		position: absolute;
+		backface-visibility: hidden;
+		color: white;
+		width: 280px;
+		height: 280px;
+		border-radius: 50%;
+		transform: rotateY(180deg);
+		background-color: rgba(85, 85, 85, 0.5);
+		background-image: url(../../assets/img/pokeball-card.png);
+		opacity: 0.5;
+		background-repeat: no-repeat;
+		background-size: 35%;
+		background-position: 0 100%;
+		&--text {
+			width: 100%;
+			height: 23%;
+			font-size: 22px;
+			text-align: center;
+		}
+	}
+	&__image {
+		width: 70%;
+		height: auto;
+		border-radius: 50%;
+	}
 }
 
 @media (max-width: 1024px) {
